add mapper capabilities and query wrapper foundation
Extend generated mappers with shared capability delegation, session-scoped converters, and lightweight query DSL primitives while tightening reflector metadata and runtime collection behavior.

Made-with: Cursor